<resources>
    <string name="app_name">CRIMP</string>
    <string name="package_name">com.nusclimb.live</string>
    <string name="categories_file">categories_file</string>

    <!-- Facebook stuff -->
    <string name="facebook_app_id">1448790512098965</string>

    <!-- URL -->
    <string name="login_api">/api/judge/login</string>
    <string name="report_api">/api/judge/report</string>
    <string name="helpme_api">/api/judge/helpme</string>
    <string name="categories_api">/api/judge/categories</string>
    <string name="climber_api">/api/judge/climber/</string>
    <string name="activemonitor_api">/api/judge/activemonitor</string>
    <string name="get_score_api">/api/judge/score/</string>
    <string name="post_score_api">/api/judge/score/</string>

    <!-- Login Activity UI -->
    <string name="login_activity_login_wait">Awaiting confirmation from admins…</string>
    <string name="login_activity_categories_wait">Retrieving route list…</string>
    <string name="login_activity_login_hey">"Hey "</string>
    <string name="login_activity_login_exclamation">"! "</string>
    <string name="login_activity_verification_fail">Access denied. Please contact admin to request for permission.</string>
    <string name="login_activity_verification_error">Verification error: Wrong/No response from server.</string>
    <string name="login_activity_categories_fail">Route list request denied. This should not happen.</string>
    <string name="login_activity_categories_error">Categories request error: Wrong/No response from server.</string>
    <string name="login_activity_cancel">Cancel</string>
    <string name="login_activity_retry">Retry</string>

    <!-- Route Fragment UI -->
    <string name="route_fragment_next">Next</string>
    <string name="route_fragment_category_hint">Pick a category</string>
    <string name="route_fragment_route_hint">Pick a route</string>
    <string name="route_fragment_greeting">"Hello "</string>
    <string name="route_fragment_question">, you are route judge for</string>
    <string name="route_fragment_replace_question1">" is already route judge for "</string>
    <string name="route_fragment_replace_question2">", "</string>
    <string name="route_fragment_replace_question3">".\n\nReplace "</string>
    <string name="route_fragment_replace_question4">"?"</string>
    <string name="route_fragment_yes">Yes</string>
    <string name="route_fragment_no">No</string>
    <string name="route_fragment_retry">Retry</string>
    <string name="route_fragment_status_category_fail">Fail to get categories information</string>
    <string name="route_fragment_status_report_in_fail">No/Wrong response from server.</string>
    <string name="route_fragment_status_report_in">Judge reporting in…</string>


    <!-- Scan Fragment UI -->
    <string name="scan_fragment_climberid">"Climber ID"</string>
    <string name="scan_fragment_climbername">"Climber name (optional)"</string>
    <string name="scan_fragment_rescan">Rescan</string>
    <string name="scan_fragment_flash">Flash</string>
    <string name="scan_fragment_next">Next</string>

    <!-- Score Fragment UI -->


    <!-- UploadList Activity UI -->
    <string name="upload_activity_climber">"Climber: "</string>
    <string name="upload_activity_route">"Route: "</string>
    <string name="upload_activity_status">"Status: "</string>


    <!-- UploadEdit Activity UI -->
    <string name="uploadedit_activity_save">Save changes</string>
    <string name="uploadedit_activity_no_save">Don\'t save changes</string>
    <string name="uploadedit_activity_cancel_task">Cancel task</string>
    <string name="uploadedit_activity_no_cancel_task">Don\'t cancel task</string>







    <!-- User Bundle Key -->
    <string name="bundle_access_token">bundle_access_token</string>
    <string name="bundle_user_name">bundle_user_name</string>
    <string name="bundle_x_user_id">bundle_xuserid</string>
    <string name="bundle_x_auth_token">bundle_xauthtoken</string>
    <string name="bundle_category_id">bundle_categoryid</string>
    <string name="bundle_route_id">bundle_routeid</string>

    <!-- Categories Bundle Key -->
    <string name="bundle_category_name_list">bundle_categorynamelist</string>
    <string name="bundle_category_id_list">bundle_categoryidlist</string>
    <string name="bundle_category_route_count_list">bundle_categoryroutecountlist</string>
    <string name="bundle_route_name_list">bundle_routenamelist</string>
    <string name="bundle_route_id_list">bundle_routeidlist</string>
    <string name="bundle_route_score_list">bundle_routescorelist</string>
    <string name="bundle_category_finalize_list">bundle_categoryfinalizelist</string>
    <string name="bundle_category_start_list">bundle_categorystartlist</string>
    <string name="bundle_category_end_list">bundle_categoryendlist</string>

    <!-- Climber Bundle Key -->
    <string name="bundle_climber_id">bundle_climberid</string>
    <string name="bundle_climber_name">bundle_climbername</string>
    <string name="bundle_total_score">bundle_totalscore</string>

    <!-- Fragment/Activity State -->
    <string name="bundle_login_state">bundle_loginstate</string>
    <string name="bundle_route_state">bundle_routestate</string>
    <string name="bundle_scan_state">bundle_scanstate</string>
    <string name="bundle_score_state">bundle_scorestate</string>

    <!-- HelloActivityFragment Bundle Bundle Key -->
    <string name="bundle_route_bundle">bundle_routebundle</string>
    <string name="bundle_scan_bundle">bundle_scanbundle</string>
    <string name="bundle_score_bundle">bundle_scorebundle</string>

    <!-- Other Bundle Key -->
    <string name="bundle_category_spinner_selected_index">bundle_categoryspinnerselectedindex</string>
    <string name="bundle_route_spinner_selected_index">bundle_routespinnerselectedindex</string>
    <string name="bundle_hello_fragment_count">bundle_hellofragmentcount</string>
    <string name="bundle_hello_previous_index">bundle_hellopreviousindex</string>

    


    <string name="bundle_category_spinner_selection">bundle_categoryspinnerselection</string>
    <string name="bundle_route_spinner_selection">bundle_routespinnerselection</string>
    <string name="bundle_category_full_name">bundle_categoryfullname</string>
    <string name="bundle_route_full_name">bundle_routefullname</string>
    <string name="bundle_decode_state">bundle_decodestate</string>
    <string name="bundle_current_judge">bundle_currentjudge</string>
    <string name="bundle_tab_count">bundle_tabcount</string>
    <string name="bundle_current_tab">bundle_currenttab</string>



    <!-- SharedPreferences key -->
    <string name="preference_is_login">preference_islogin</string>
    <string name="preference_x_user_id">preference_xuserid</string>
    <string name="preference_x_auth_token">preference_xauthtoken</string>
    <string name="preference_category_id">preference_catid</string>
    <string name="preference_category_name">preference_catname</string>
    <string name="preference_route_count">preference_routecount</string>


    <!-- UploadEdit intent -->
    <string name="intent_x_user_id">intent_xuserid</string>
    <string name="intent_x_auth_token">intent_xauthtoken</string>
    <string name="intent_cid">intent_cid</string>
    <string name="intent_rid">intent_rid</string>
    <string name="intent_score">intent_score</string>






    <string name="action_settings">Settings</string>
    <string name="action_helpme">Help me</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_upload_list">UploadListActivity</string>




    <!-- Intent Key -->
    <string name="intent_username">.username</string>
    <string name="intent_round">.round</string>
    <string name="intent_route">.route</string>
    <string name="intent_climber_id">.climber_id</string>
    <string name="intent_climber_name">.climber_name</string>
    <string name="intent_dl_url">.downloadUrl</string>
    <string name="intent_ul_url">.uploadUrl</string>
    <string name="intent_j_name">.jName</string>
    <string name="intent_auth_code">.authCode</string>
    <string name="intent_r_id">.rId</string>
    <string name="intent_c_id">.cId</string>
    <string name="intent_score_append">.appendScore</string>



    <string name="intent_key_current_selected_tab">.currentSelectedTab</string>


</resources>
