<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.nusclimb.live.crimp.login.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:src="@drawable/logo"
        android:adjustViewBounds="true" />

    <ScrollView android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp" />

            <LinearLayout
                android:id="@+id/verifying_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:visibility="gone" >

                <ProgressBar android:id="@+id/loading_wheel"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/response_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_margin"
                    android:gravity="center_horizontal"
                    android:text="@string/login_activity_login_wait" />

                <Button
                    android:id="@+id/login_cancel_button"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="@dimen/button_horizontal_padding"
                    android:paddingRight="@dimen/button_horizontal_padding"
                    android:onClick="cancel"
                    android:text="@string/login_activity_cancel" />

                <Button
                    android:id="@+id/login_retry_button"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="@dimen/button_horizontal_padding"
                    android:paddingRight="@dimen/button_horizontal_padding"
                    android:onClick="retry"
                    android:text="@string/login_activity_retry"
                    android:visibility="gone"/>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
